# finam-x-hse-trade-ai-hack-forecast

./: .gitignore  README.md  amir.ipynb  process_data.ipynb  pyproject.toml  requirements.txt  zahar.ipynb
docs/: data.md  evaluation.md  task.md
scripts/: baseline_solution.py
